<resources>
    <string name="app_name">Notepad</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="manager">Manager</string>
    <string name="text">TEXT</string>
    <string name="font_size">Text Size:</string>
    <string name="read_text">Режим читання</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="makeDir">New Folder</string>
    <string name="make">Make</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="new_doc">New Documet</string>

</resources>
